a1/brendan_gordon/TEST_PROGRAMS/invalidtype/frederic_lafrance/1.min
# Condition is not an int since y extends the entire expression to float type.

var x: int;
var y: float;

if (x + x) / (x + y) then endif
